// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupBy > Correctly groups by number values 1`] = `
{
  "10": [
    {
      "count": 10,
      "id": 1,
    },
    {
      "count": 10,
      "id": 2,
    },
  ],
  "20": [
    {
      "count": 20,
      "id": 3,
    },
  ],
  "30": [
    {
      "count": 30,
      "id": 4,
    },
  ],
}
`;

exports[`groupBy > Correctly groups by string values 1`] = `
{
  "a": [
    {
      "name": "a",
    },
    {
      "name": "a",
    },
  ],
  "b": [
    {
      "name": "b",
    },
  ],
  "c": [
    {
      "name": "c",
    },
  ],
}
`;

exports[`groupBy > Correctly handles undefined 1`] = `
{
  "45": [
    {
      "id": 1,
      "name": "45",
    },
    {
      "id": 4,
      "name": "45",
    },
  ],
  "undefined": [
    {
      "id": 2,
    },
    {
      "id": 3,
    },
  ],
}
`;
